--- a/WebTests/WebTests/settings.json
+++ b/WebTests/WebTests/settings.json
@@ -1,5 +1,5 @@
 ﻿{
     "BaseUrl": "https://www.toodledo.com",
-    "Email": "zhabkakisa@gmail.com",
-    "Password": "Muffin21021"
+    "Email": "",
+    "Password": ""
 }
